--- a/overlays/demo1/kustomization.yaml
+++ b/overlays/demo1/kustomization.yaml
@@ -2,6 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
-  - serviceaccount.yaml
 generators:
-  - ../../../helm/patches/demo2
+  - ../../helm/base
